--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,7 @@ h6.major {
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2.5rem;
   line-height: 1.3;
   letter-spacing: 0.5rem;
 }
@@ -753,7 +753,6 @@ input[type="radio"] + label:before {
 
 .image:before {
   pointer-events: none;
-  background-image: url("../../images/overlay.png");
   background-color: rgba(19, 21, 25, 0.5);
   border-radius: 4px;
   content: "";
@@ -1248,8 +1247,7 @@ button {
       to top,
       rgba(19, 21, 25, 0.5),
       rgba(19, 21, 25, 0.5)
-    ),
-    url("../../images/overlay.png");
+    );
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
@@ -1459,7 +1457,7 @@ body.is-preload #bg:before {
 #header .content p {
   text-transform: uppercase;
   letter-spacing: 0.2rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 2;
 }
 
@@ -1476,6 +1474,9 @@ body.is-preload #bg:before {
 }
 
 #header nav ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding-left: 0;
   border-left: solid 1px #ffffff;
 }
@@ -1485,14 +1486,12 @@ body.is-preload #bg:before {
 }
 
 #header nav ul li a {
-  display: block;
   min-width: 7.5rem;
-  height: 2.75rem;
-  line-height: 2.75rem;
-  padding: 0 1.25rem 0 1.45rem;
+  line-height: 1.5rem;
+  padding: 1.75rem 1.5rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
   border-bottom: 0;
 }
 
@@ -1502,21 +1501,6 @@ body.is-preload #bg:before {
 
 #header nav ul li a:active {
   background-color: rgba(255, 255, 255, 0.175);
-}
-
-#header nav.use-middle:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: calc(50% - 1px);
-  width: 1px;
-  height: 100%;
-  background: #ffffff;
-}
-
-#header nav.use-middle ul li.is-middle {
-  border-left: 0;
 }
 
 body.is-article-visible #header {
@@ -1555,7 +1539,7 @@ body.is-preload #header .content .inner {
   }
 }
 
-@media screen and (max-width: 736px) {
+@media screen and (max-width: 768px) {
   #header > * {
     margin-top: 2rem;
   }
@@ -1582,16 +1566,6 @@ body.is-preload #header .content .inner {
   #header .content p {
     line-height: 1.875;
   }
-}
-
-@media screen and (max-width: 480px) {
-  #header {
-    padding: 1.5rem 0;
-  }
-
-  #header .content .inner {
-    padding: 2.5rem 0;
-  }
 
   #header nav ul {
     -moz-flex-direction: column;
@@ -1610,16 +1584,20 @@ body.is-preload #header .content .inner {
   #header nav ul li:first-child {
     border-top: 0;
   }
+}
 
-  #header nav ul li a {
-    height: 3rem;
-    line-height: 3rem;
-    min-width: 0;
-    width: 100%;
+@media screen and (max-width: 480px) {
+  #header {
+    padding: 1.5rem 0;
   }
 
-  #header nav.use-middle:after {
-    display: none;
+  #header .content .inner {
+    padding: 2.5rem 0;
+  }
+
+  #header nav ul li a {
+    min-width: 0;
+    width: 100%;
   }
 }
 
